# 2020-Portfolio

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: rust.yml
scss/: client.scss
src/: lib.rs  main.rs
src/components/: mod.rs  title.rs  typing_content.rs
src/constants/: text.rs
static/: index.html
